@@ -2,6 +2,7 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745)
+	- Added redraw of some widgets to show focus change (STR #910)
 	- Fl::set_font would not clear 'pretty' name (STR #902)
 	- Fixed unescaped '@' in fonts demo (STR #867)
 	- Fluid should not open the Display connection anymore if
